Add json boolean property & support automatic conversion to and from JSON

--- a/demo/index.html
+++ b/demo/index.html
@@ -69,7 +69,7 @@
       };
 
       scope._onMessage = function (event) {
-        scope.set('received', event.detail.data);
+        scope.set('received', event.detail);
       };
     </script>
   </body>
