--- a/web-socket.html
+++ b/web-socket.html
@@ -9,7 +9,8 @@ Example:
                 on-open="_onOpen"
                 on-close="_onClose"
                 on-message="_onMessage"
-                on-error="_onError">
+                on-error="_onError"
+                json>
     </web-socket>
 
 @element web-socket
