Add auto property to automatically open connection

--- a/demo/index.html
+++ b/demo/index.html
@@ -37,6 +37,7 @@
     <template is="dom-bind">
       <web-socket id="ws"
                   url="ws://echo.websocket.org"
+                  auto
                   on-open="_onOpen"
                   on-message="_onMessage">
       </web-socket>
