--- a/web-socket.html
+++ b/web-socket.html
@@ -48,7 +48,7 @@ Example:
       },
 
       /**
-       * Automatically encode sent messages to JSON and attemt to parse
+       * Automatically encode sent messages to JSON and attempt to parse
        * incoming messages into an Object from JSON.
        */
       json: {
